traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: value unary_! is not a member of Unit
  while(!testFin()){
        ^TraversalByColumn:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^TraversalByColumn:12: warning: enclosing method testFin has result type Unit: return value discarded
    return true
    ^TraversalByColumn:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^TraversalByColumn:14: warning: enclosing method testFin has result type Unit: return value discarded
    return false
    ^